trunk/Archive2/7a/7f4523f289494c/output
main.cpp:48:35: error: member reference type 'std::pair<const UniqueNamesPair, UniqueIdsPair>' is not a pointer; maybe you meant to use '.'?
        std::wcout << L"\t" << git->first.substationName << L": \t" << git->second.substationId << std::endl;
                               ~~~^~
                                  .
main.cpp:48:75: error: member reference type 'std::pair<const UniqueNamesPair, UniqueIdsPair>' is not a pointer; maybe you meant to use '.'?
        std::wcout << L"\t" << git->first.substationName << L": \t" << git->second.substationId << std::endl;
                                                                       ~~~^~
                                                                          .
main.cpp:49:36: error: member reference type 'std::pair<const UniqueNamesPair, UniqueIdsPair>' is not a pointer; maybe you meant to use '.'?
        std::wcout << L"\t" <<  git->first.terminalName << L": \t" << git->second.terminalId << std::endl;
                                ~~~^~
                                   .
main.cpp:49:74: error: member reference type 'std::pair<const UniqueNamesPair, UniqueIdsPair>' is not a pointer; maybe you meant to use '.'?
        std::wcout << L"\t" <<  git->first.terminalName << L": \t" << git->second.terminalId << std::endl;
                                                                      ~~~^~
                                                                         .
4 errors generated.
